tests/integration/tests/invalid_input/04_nonempty_check_file_but_no_checks/sample.itest
; RUN: echo "" | (%FILECHECK_EXEC %S/filecheck.check 2>&1; test $? = 2) | %FILECHECK_TESTER_EXEC %s --match-full-lines
; CHECK: {{^.*}}FileCheck{{(\.py)?$}}
; CHECK: error: no check strings found with prefix 'CHECK:'
; CHECK-EMPTY
